--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 }
 
 .dashboard .heading {
-    margin: 50px 0px 5px 30px;
+    margin: 50px 0px 10px 30px;
 }
 main {
     display: flex;
@@ -50,15 +50,58 @@ main {
     font-family: 'Montserrat', sans-serif;
 }
 
+.dashboard table ,th , td  {
+    
+    padding: 8px;
+
+}
+.dashboard table th {
+    background-color: white ;
+    
+}
+.dashboard table {
+    margin: 30px 0px 0px 50px;
+}
+
 main .dashboard .line {
-    height: 10px;
+   width: 80vw;
+    height: 2px;
+    background-color: #111;
 }
 
 .sidebar-li {
     font-size: 20px;
     list-style: none;
-    
     color: white;
     margin-top: 40px;
     line-height: 30px;
 }
+.assignments-li {
+    list-style: none;
+    font-size: 20px;
+}
+
+.subjects {
+    display: inline-block;
+    padding-left: 2px;
+    vertical-align: middle;
+    cursor: pointer;
+}
+.li-button {
+    display: inline-block;
+    vertical-align: middle;
+    background-color: rgba(10, 11, 10, 0);
+    font-size: 20px;
+    color: white;
+    border: none ;
+    cursor: pointer;
+}
+.assignments-li {
+    display: none;
+}
+.assignments-li a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+}
+
