--- a/style.css
+++ b/style.css
@@ -73,9 +73,22 @@ main .dashboard .line {
     font-size: 20px;
     list-style: none;
     color: white;
-    margin-top: 40px;
+    margin-top: 50px;
     line-height: 30px;
 }
+
+.create-btn {
+    width: auto;
+    height: auto;
+    border: 1px solid white ;
+    background-color: rgba(10, 11, 10, 0);
+    color: white;
+    text-align: center;
+    font-size: 16px;
+    margin: 54px 0px 0px 10px ;
+    cursor: pointer;
+}
+
 .assignments-li {
     list-style: none;
     font-size: 20px;
