Added the assignments page

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ main .dashboard .line {
     font-size: 20px;
     list-style: none;
     color: white;
-    margin-top: 50px;
+    margin-top: 40px;
     line-height: 30px;
 }
 
@@ -87,6 +87,7 @@ main .dashboard .line {
     font-size: 16px;
     margin: 54px 0px 0px 10px ;
     cursor: pointer;
+    padding: 5px;
 }
 
 .assignments-li {
