Quiz service integration

--- a/ATS/Quiz-service/views/Quiz.html
+++ b/ATS/Quiz-service/views/Quiz.html
@@ -23,22 +23,9 @@
     </navbar>
     <main>
              <div class="modal">
-                <div class="modal-content">
+                <div id = "sub-modal" class="modal-content">
                     <span class="close-button">&times;</span>
-                    <table>
-                        <tr>
-                            <th> No </th>
-                            <th> Name </th>
-                            <th> Reg.no </th>
-                            <th> Marks </th>
-                        </tr>
-                        <tr>
-                            <td> 1 </td>
-                            <td> Rohan </td>
-                            <td> 159102104 </td>
-                            <td> 10 </td>
-                        </tr>
-                            
+                    <table id = "sub-table">
                     </table>
                 </div>
             </div>
